fix: align items

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -12,12 +12,9 @@ label {
 th{
 	background: #607d8b !important;
 	color: white !important;
+	
 }
 
-.table-head-color {
-	background: #607d8b !important;
-	color: white !important;
-}
 .ui-tag {
 	font-size: 1.4rem !important;
 	width: 40vw;
